control-plane/custom-gateway-api/examples/experimental/v1alpha2/grpc-routing/bar-grpcroute.yaml
#$ Used in:
#$ - site-src/guides/grpc-routing.md
apiVersion: consul.networking.io/v1alpha2
kind: GRPCRoute
metadata:
  name: bar-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "bar.example.com"
  rules:
  - matches:
    - headers:
      - type: Exact
        name: env
        value: canary
    backendRefs:
    - name: bar-svc-canary
      port: 50051
  - backendRefs:
    - name: bar-svc
      port: 50051
