control-plane/custom-gateway-api/examples/experimental/v1alpha2/grpc-routing/foo-grpcroute.yaml
#$ Used in:
#$ - site-src/guides/grpc-routing.md
apiVersion: consul.networking.io/v1alpha2
kind: GRPCRoute
metadata:
  name: foo-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "foo.example.com"
  rules:
  - matches:
    - method:
        service: com.example
        method: Login
    backendRefs:
    - name: foo-svc
      port: 50051
