control-plane/custom-gateway-api/examples/experimental/v1alpha2/grpc-routing/gateway.yaml
#$ Used in:
#$ - site-src/guides/grpc-routing.md
apiVersion: consul.networking.io/v1beta1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: grpc
    protocol: HTTPS
    port: 50051
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: example-com-cert
---
apiVersion: consul.networking.io/v1alpha2
kind: GRPCRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 50051
